# gl-sdk-cookbook

./: .gitignore  README.md
gen-ai/: README.md
gen-ai/examples/build_e2e_rag_pipeline/002_dynamic_step/: pipeline.py
gen-ai/examples/build_e2e_rag_pipeline/003_implement_semantic_routing/: README.md  pipeline.py  pyproject.toml
gen-ai/examples/build_e2e_rag_pipeline/005_simple_guardrail/: pipeline.py
gen-ai/examples/build_e2e_rag_pipeline/caching/: .env.example
gen-ai/examples/build_e2e_rag_pipeline/your_first_rag_pipeline/: README.md
gen-ai/examples/data_store/: .env.example  README.md  indexing.py
gen-ai/examples/evaluation/getting_started/: README.md  eval.py  pyproject.toml
gen-ai/examples/i18n/: README.md  pyproject.toml  translation.py
gen-ai/examples/i18n/locales/en_US/LC_MESSAGES/: messages.mo  messages.po
gen-ai/examples/i18n/locales/id_ID/LC_MESSAGES/: messages.mo  messages.po
glaip/: README.md
glaip/examples/agent-export-import/: main.py  pyproject.toml
glaip/examples/hello-world/: README.md  main.py
glaip/examples/hello-world-local/: Makefile  README.md  main.py  main_with_a2a_token_streaming.py  main_with_agent_definition_configs.py  main_with_chat_history.py  main_with_docproc_pdf.py  main_with_gl_connectors_tool.py  main_with_hitl.py  main_with_local_files.py  main_with_mcp.py  main_with_memory.py  main_with_native_tool.py  main_with_pii_toggle.py  main_with_runtime_config.py  main_with_subagents.py  main_with_tool_output_sharing.py  pyproject.toml
glaip/examples/hello-world/mcps/: __init__.py
glaip/examples/modular-tool-integration/: main.py  pyproject.toml
glaip/examples/modular_tool_integration/: .env.example  README.md  main.py
glaip/examples/multi-agent/: main.py
glaip/examples/multi-agent-system-patterns/: pyproject.toml
glaip/examples/runtime-config/: README.md  main.py
glchat/: README.md
glchat/examples/hello-world/: README.md
glchat/examples/pii-masking/: README.md
gllm/: README.md
(+11 files in other folders)
